--- a/public/relatorios.html
+++ b/public/relatorios.html
@@ -255,9 +255,9 @@
             const addressCount = {};
 
             orders.forEach(order => {
-                // Verifica se o endereço é válido antes de acessar suas propriedades
-                const address = order.customer && order.customer.address && order.customer.address.street && order.customer.address.number
-                    ? `${order.customer.address.street}, ${order.customer.address.number}`
+                // Verifica se o deliveryPoint é válido antes de acessar suas propriedades
+                const address = order.deliveryPoint && order.deliveryPoint.street && order.deliveryPoint.number
+                    ? `${order.deliveryPoint.street}, ${order.deliveryPoint.number}`
                     : null;
 
                 if (address) {
@@ -284,8 +284,8 @@
                 row.insertCell().textContent = order.courier ? order.courier.courierName : 'N/A';
                 row.insertCell().textContent = getStatusDisplay(order.status);
                 row.insertCell().textContent = translatePaymentMethod(order.paymentMethod);
-                row.insertCell().textContent = order.customer && order.customer.address && order.customer.address.street && order.customer.address.number
-                    ? `${order.customer.address.street}, ${order.customer.address.number}`
+                row.insertCell().textContent = order.deliveryPoint && order.deliveryPoint.street && order.deliveryPoint.number
+                    ? `${order.deliveryPoint.street}, ${order.deliveryPoint.number}`
                     : 'N/A';
                 row.insertCell().textContent = order.orderTotal !== undefined ? `R$ ${order.orderTotal.toFixed(2)}` : 'N/A';
 
