--- a/public/teste.html
+++ b/public/teste.html
@@ -433,7 +433,7 @@
             <nav class="sidebar">
                 <a href="createOrder.html" title="Home"><i class="fas fa-home"></i></a>
                 <a href="createOrder.html" title="Pedidos"><i class="fas fa-clipboard-list"></i></a>
-                <a href="relatorio.html" title="Relatórios"><i class="fas fa-chart-bar"></i></a>
+                <a href="relatorios.html" title="Relatórios"><i class="fas fa-chart-bar"></i></a>
             </nav>
             <section class="orders-section">
                 <div class="orders-header">
