--- a/public/teste2.html
+++ b/public/teste2.html
@@ -975,25 +975,36 @@
         }
 
         function checkForZeroNumberAddress(orders) {
+            console.log("Verificando endereços...");
             orders.forEach(order => {
-                if (order.deliveryPoint && isAddressOnlyZero(order.deliveryPoint) && !closedZeroNumberNotifications.has(order.id)) {
-                    showZeroNumberAddressNotification(order);
+                console.log(`Verificando pedido #${order.id}`);
+                if (order.deliveryPoint) {
+                    console.log("Dados do endereço:", JSON.stringify(order.deliveryPoint));
+                    if (isAddressOnlyZero(order.deliveryPoint) && !closedZeroNumberNotifications.has(order.id)) {
+                        console.log(`Notificação necessária para pedido #${order.id}`);
+                        showZeroNumberAddressNotification(order);
+                    }
                 }
             });
         }
 
-                function isAddressOnlyZero(deliveryPoint) {
+        function isAddressOnlyZero(deliveryPoint) {
             // Combina todos os campos relevantes do endereço em uma única string
             const fullAddress = `${deliveryPoint.street} ${deliveryPoint.houseNumber} ${deliveryPoint.complement || ''} ${deliveryPoint.address || ''}`.toLowerCase();
+            console.log("Endereço completo:", fullAddress);
             
             // Remove todos os caracteres que não são dígitos
             const numbersInAddress = fullAddress.replace(/\D/g, '');
+            console.log("Números no endereço:", numbersInAddress);
             
             // Verifica se o endereço contém apenas zeros ou nenhum número
-            return numbersInAddress === '0' || numbersInAddress === '';
+            const result = numbersInAddress === '0' || numbersInAddress === '';
+            console.log("Resultado da verificação:", result);
+            return result;
         }
 
         function showZeroNumberAddressNotification(order) {
+            console.log(`Mostrando notificação para pedido #${order.id}`);
             const message = `
                 O pedido #${order.id} tem um endereço possivelmente incompleto!
                 Cliente: ${order.customer.customerName}
